# tactical-RPG

./: Before first release TODO.md  CMakeLists.txt  README.md
code generators/: generate_character_Foozle.py
data/: example_level.txt
src/: Fonts.cpp  Fonts.h  Global.h  Program.cpp  Program.h  main.cpp
src/AI/: Core.cpp  Core.h  Decision.cpp  Decision.h
src/AI/Actions/: Action.cpp  Action.h  Attack.cpp  Attack.h  FinishTurn.cpp  FinishTurn.h  Move.cpp  Move.h
src/Abilities/: Ability.cpp  Ability.h  Attack.cpp  Attack.h
src/Animations/: Animation.h  ChangeHpBar.cpp  ChangeHpBar.h  Death.cpp  Death.h  Disappear.cpp  Disappear.h  Hurt.cpp  Hurt.h  Manager.cpp  Manager.h  MoveBy.cpp  MoveBy.h  OnTexture.cpp  OnTexture.h
src/Animations/Actions/: Move.cpp  Move.h
src/Characters/: Character.cpp  Character.h  CharacterOnBoard.cpp  CharacterOnBoard.h  GoblinBerserker.cpp  GoblinBerserker.h  GoblinSlinger.cpp  GoblinSlinger.h  HpBar.cpp  HpBar.h  Sorceress.cpp  Sorceress.h  Warrior.cpp  Warrior.h
src/GameEngine/: ActiveBoard.cpp  ActiveBoard.h  BattleQueue.cpp  BattleQueue.h  Camera.cpp  Camera.h  Field.cpp  Field.h  FieldSet.cpp  FieldSet.h  FullBoard.cpp  FullBoard.h  Game.cpp  Game.h  Level.cpp  Level.h  Pathfinder.cpp  Pathfinder.h  Range.cpp  Range.h  Road.cpp  Road.h
src/Menu/: Menu.cpp  Menu.h  MenuButton.cpp  MenuButton.h
src/UI/: Button.cpp  Button.h  TextBox.cpp  TextBox.h  Textfield.cpp  Textfield.h  UI.cpp  UI.h
